--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "@nuxtjs/style-resources": "^1.0.0",
     "nuxt": "2.13.2",
-    "nuxt-webfontloader": "^1.1.0"
+    "nuxt-webfontloader": "^1.1.0",
+    "vue-sweetalert2": "^3.0.6"
   },
   "devDependencies": {
     "node-sass": "^4.14.1",
