--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "vue-sweetalert2": "^3.0.6"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
+    "push-dir": "^0.4.1",
     "sass-loader": "^8.0.2"
   }
 }
